--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node --inspect server.js"
+  },
   "dependencies": {
     "apollo-server-express": "^2.12.0",
     "cookie-parser": "^1.4.5",
