--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apollo-server-express": "^2.12.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^5.0.0",
     "i18next": "^19.4.4"
   }
 }
